terraform/01-network/vpc.tf
# --- VPC ---
resource "aws_vpc" "main" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "ecs-demo-vpc"
  }
}
